Use now AWS Cognito for Signup, validateMail and Login
