# src/interfaces/request/signup.go
@@ -3,11 +3,12 @@ package request
 import "errors"
 
 type Signup struct {
-	Email     string `json:"email" validate:"required,email" example:"john@doe.com"`
-	Username  string `json:"username" validate:"required" example:"john_doe"`
-	Password  string `json:"password" validate:"required" example:"password123"`
-	FirstName string `json:"firstname" example:"John"`
-	LastName  string `json:"lastname" example:"Doe"`
+	Email       string `json:"email" validate:"required,email" example:"john@doe.com"`
+	Username    string `json:"username" validate:"required" example:"john_doe"`
+	Password    string `json:"password" validate:"required" example:"password123"`
+	FirstName   string `json:"firstname" example:"John"`
+	LastName    string `json:"lastname" example:"Doe"`
+	PhoneNumber string `json:"phonenumber" example:"+1234567890"`
 }
 
 func (cu *Signup) Validate() error {
